--- a/index.html
+++ b/index.html
@@ -312,3 +312,24 @@
               <option value="SILVER">SILVER (Commodity)</option>
               <option value="OIL">OIL (Commodity)</option>
               <option value="COPPER">COPPER (Commodity)</option>
+            </select>
+          </div>
+
+          <!-- Add remaining form inputs as needed -->
+
+          <button type="submit">Save Trade</button>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+  <script>
+    // Toggle dark mode
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark-mode');
+    }
+  </script>
+
+</body>
+</html>
